feat(tag-forward): 添加标签转发插件，支持媒体组原子性处理和批量转发优化
- 在数据库文档中添加 forward_queue 集合定义，包括结构、索引和业务规则
- 在开发者指南中添加标签转发插件开发示例，涵盖架构、代码和设计要点
- 改进插件代码以支持媒体组的原子性转发，确保整组消息不被拆分
- 实现批量转发优化，减少 TDLib API 调用次数并提升效率
- 增强错误处理和重试机制，集成频率限制和自动清理功能